# PAML-Final

./: .gitignore  Data_preprocessing.ipynb  README.md  pyproject.toml
data/: build_zip_borough.py  nyc_zip_borough.json
data/geo_data/nyc_taxi_zones/: nyc_taxi_zones.dbf  nyc_taxi_zones.shp
data/geo_data/nyc_zip/: nyc_zip.dbf
data/original_data/: NYC Central Park Station 2020_2026.csv  Readme_data.txt
stage1/: main.py  model.py  predict.py  stage1.ipynb
stage1/checkpoints/final/: bayesian.npz  ridge.npz
stage2/: main.py  model.py  predict.py
stage2/checkpoints/: nb.npz  poisson.npz
stage2/checkpoints/final/: nb.npz  poisson.npz
stage2_analysis/: plot_maps.py
streamlit/: app.py
streamlit/.streamlit/: config.toml
