[project]
name = "nyc-zip-crash-prediction"
version = "0.1.0"
description = "A Machine Learning Approach to ZIP-Code-Level Traffic Crash Prediction in New York City"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "scipy>=1.13,<2",
    "pyarrow>=16,<20",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<0.14",
    "plotly>=5.22,<7",
    "streamlit>=1.37,<2",
    "geopandas>=1.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29,<7",
    "jupyterlab>=4.2,<5",
    "pytest>=8.2,<9",
]

[tool.uv]
package = false

# Course constraint from the project instructions:
# implement models without high-level ML libraries such as
# scikit-learn, XGBoost, TensorFlow, or PyTorch training APIs.
